Add license definition

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
 	"name": "mepatek/daterangepicker",
 	"description": "Nette component daterangepicker (bootstrap)",
+	"license": "MIT",
 	"require": {
 		"php": ">=5.3.0"
 	}
